--- a/app/src/main/res/layout/fragment_plant_default_list.xml
+++ b/app/src/main/res/layout/fragment_plant_default_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.gardenwarden.DeviceFragment"
+    android:name="com.example.gardenwarden.DefaultPlantFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".device.DeviceFragment"
-    tools:listitem="@layout/fragment_device" />
+    tools:context=".DefaultPlantFragment"
+    tools:listitem="@layout/fragment_plant_default" />
