DeviceForm working as intended

--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -8,7 +8,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/plant_add_fragment"
-        android:name="com.example.gardenwarden.device.DeviceFragment"
+        android:name="com.example.gardenwarden.device.DeviceFormFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
