--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.FormFragment" >
+    tools:context=".forms.plantAdd.FormFragment" >
 
     <Button
         android:id="@+id/form_date_picker"
