--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -6,12 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/device_own_add_label_slots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/device_add_own_slots_label"
+        app:layout_constraintStart_toStartOf="@+id/device_own_add_name"
+        app:layout_constraintTop_toBottomOf="@+id/device_own_add_name" />
+
     <EditText
         android:id="@+id/device_own_add_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/device_add_own_url_hint"
+        android:hint="@string/device_add_own_name_hint"
         android:importantForAutofill="no"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/device_add_label"
