--- a/app/src/main/res/layout/activity_detail_plant.xml
+++ b/app/src/main/res/layout/activity_detail_plant.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".details.PlantDetailActivity">
 
+    <Button
+        android:id="@+id/button_plant_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="@string/detail_plant_delete"
+        app:layout_constraintBottom_toBottomOf="@+id/detail_measurements"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/detail_plant_label_type"
         android:layout_width="0dp"
